# tech-challenge-churn-prediction

./: .gitignore  Makefile  pyproject.toml  readme.md  run_mlflow.py  video_STAR.txt
docs/: ml_canvas.md  model_card.md  monitoring_plan.md
models/: modelo_churn.pt
notebooks/: eda_churn.ipynb
noteboooks/: eda_churn.ipynb
src/: logging_config.py  main.py  preprocess.py  schema.py  train.py
tests/: test_main.py  test_preprocess.py  test_train.py
