[project]
name = "tech-challenge-churn-prediction"
version = "0.1.0"
description = "Modelo de Rede Neural para Previsão de Churn - FIAP Postech Engenharia de Machine Learning - Fase 1"
requires-python = ">=3.11"
dependencies = [
    "torch==2.12.1",             # Redes Neurais
    "ruff==0.15.20",             # Ruff Linting
    "pytest==9.1.1",             # Pytest
    "scikit-learn==1.9.0",       # Baselines e Pipelines
    "mlflow==3.14.0",            # Tracking de Experimentos
    "fastapi==0.138.1",          # API de Inferência
    "uvicorn==0.49.0",           # Servidor para a API
    "pandas==2.3.3",             # Manipulação de Dados
    "matplotlib==3.11.0",        # Visualização para EDA
    "seaborn==0.13.2",           # Visualização para EDA
    "pydantic==2.13.4",          # Validação de Dados na API
    "ipykernel==7.3.0",          # Jupyter Notebook
    "httpx==0.28.1",             # Para TestClient do FastAPI
    "python-json-logger==4.1.0", # Log Estruturado
    "pandera==0.32.0",           # Validação de Schema de DataFrames
    "joblib==1.5.3",             # Serialização do Pipeline sklearn
    "pytest-cov==7.1.0",         # Relatório de cobertura de testes
]

[tool.ruff]
line-length = 88
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]